newclay/test/Compiler/StaticEvaluator/Fail/InSymbolHeadEvaluation1/main.clay
import __primitives__.*;

symbol Foo[..'x] = staticError("I AM ERROR.", ..'x);

#Main() = staticSymbolBody(Foo[2]);
